Update url in profile item

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="profile-icon"></div>
                     <h2>Alvin Jauhari</h2>
 		   <p>Fronted End Web Developer & Product Manager</p>
-                  <button onclick="window.open('https://www.instagram.com/al_hafidz_295/', '_blank')">Connect Here</button>
+                  <button onclick="window.open('https://www.instagram.com/alvinjauhari_/', '_blank')">Connect Here</button>
                 </div>
                 <div class="profile-item">
                     <div class="profile-icon"></div>
