--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santri Coderx - Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-   <link rel="icon" href="../assets/img/logo.png"
+    <link rel="icon" href="assets/img/favicon.ico">
     <!-- Box Icon -->
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </head>
